# SmartSearchAI

./: README.md  index.html
backend/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md
backend/include/: ai_service.hpp  database.hpp  http_client.hpp  search_service.hpp
backend/src/: ai_service.cpp  database.cpp  http_client.cpp  main.cpp  search_service.cpp
frontend/: smartsearch-ai.html
